# facadeSynth

./: .gitignore  CMakeLists.txt  model_config.json
src/: Makefile  building.cpp  building.hpp  dn_predict.cpp  dn_predict.hpp  gl46.c  gl46.h  main.cpp  openglcontext.cpp  openglcontext.hpp  satellite.cpp  satellite.hpp  util.cpp  util.hpp
